<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckBoxRadioButtonFragment">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioYes" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioNo" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingMeat" />

        <CheckBox
            android:id="@+id/checkChe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingCheese" />

        <CheckBox
            android:id="@+id/checkVeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingVegitables" />

        <CheckBox
            android:id="@+id/checkSauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingSauce" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAlignment="center"
        android:layout_gravity="right"/>
</LinearLayout>